--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ a {
 
 /* TEAM */
 .uvod-team {
-    /* background-color: black; */
+    background-color: black;
     background-image: url('img/team2.PNG') !important;
     background-position: center;
 }
