--- a/style.scss
+++ b/style.scss
@@ -313,12 +313,14 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('img/slika.jpg') !important;
+    background-image: url('img/wallpaper.jpg') !important;
     background-position: center;
     width: 80%;
     padding: 0;
 }
-
+.uvod-team-games{
+  height: 60vh;
+}
 .team-next-game {
     text-align: center;
     background-color: $ljubicasta;
